--- a/content/data/config.json
+++ b/content/data/config.json
@@ -64,7 +64,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "My title",
                 "url": "#",
                 "style": "link",
                 "has_icon": false,
