config.json: updated url in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -65,7 +65,7 @@
             },
             {
                 "label": "My title",
-                "url": "#",
+                "url": "#aaa",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
